refactor: altera a lógica para buscar serviços pela ordem de criação